fixes and additions

--- a/hackstack/main_app/templates/index.html
+++ b/hackstack/main_app/templates/index.html
@@ -265,7 +265,7 @@
                                     </div>
                                     <div class="wizard-form-input">
                                         <label>Diastolic Blood Pressure *</label>
-                                        <input type="number" name="ap_lo" >
+                                        <input type="number" name="ap_low" >
                                     </div>
                                     <div class="wizard-form-input select-option-area">
                                         <label>Cholestrol Range *</label>
