--- a/hackstack/main_app/templates/index.html
+++ b/hackstack/main_app/templates/index.html
@@ -41,10 +41,10 @@
         <div class="steps order-2 position-relative w-25">
             <div class="multisteps-form__progress">
                 <span class="multisteps-form__progress-btn js-active" title="Application data"><i class="far fa-user"></i><span>Personal information</span></span>
-                <span class="multisteps-form__progress-btn" title="Tax residency"><i class="far fa-user"></i><span>Solution Provider</span></span>
-                <span class="multisteps-form__progress-btn" title="Indentity documents"><i class="far fa-user"></i><span>Personal information</span></span>
-                <!-- <span class="multisteps-form__progress-btn" title="Investability"><i class="far fa-user"></i><span>Choose a payment</span></span>
-                <span class="multisteps-form__progress-btn" title="Review"><i class="far fa-user"></i><span>Review </span></span> -->
+                <span class="multisteps-form__progress-btn" title="Tax residency"><i class="far fa-user"></i><span>Individual Details</span></span>
+                <span class="multisteps-form__progress-btn" title="Indentity documents"><i class="far fa-user"></i><span>Test Reports</span></span>
+                <!-- <span class="multisteps-form__progress-btn" title="Investability"><i class="far fa-user"></i><span>Choose a payment</span></span> -->
+                <span class="multisteps-form__progress-btn" title="Review"><i class="far fa-user"></i><span>Lifestyle Habits </span></span>
             </div>
         </div>
         <form class="multisteps-form__form w-75 order-1" method="GET" id="wizard">
@@ -55,7 +55,7 @@
                         <div class="inner pb-100 clearfix">
                             <div class="wizard-title text-center">
                                 <h3>Please, enter your personal information</h3>
-                                <p>has been a while. I would like to present you the project I work </p>
+                                <p>The Primary Key is Phone Number</p>
                             </div>
                             <div class="wizard-photo-area">
                                 <div class="wizard-photo-upload position-relative">
@@ -79,7 +79,7 @@
                                     <input type="email" name="email" >
                                 </div>
                                 <div class="wizard-form-input">
-                                    <label>Contact Number *</label>
+                                    <label>Phone Number *</label>
                                     <input type="text" name="phone">
                                 </div>
                                 <div class="wizard-form-input mb-60 mt-60">
@@ -203,7 +203,7 @@
                             <div class="wizard-note-subject pb-100">
                                 <div class="wizard-form-field mb-85">
                                     <div class="wizard-form-input">
-                                        <label>Age *</label>
+                                        <label>Age (Years) *</label>
                                         <input type="number" name="age" >
                                     </div>
                                 
@@ -215,11 +215,11 @@
                                     </select>
                                 </div>
                                     <div class="wizard-form-input">
-                                        <label>Height *</label>
+                                        <label>Height (CMs) *</label>
                                         <input type="number" name="height">
                                     </div>
                                     <div class="wizard-form-input">
-                                        <label>Weight *</label>
+                                        <label>Weight (KGs) *</label>
                                         <input type="number" name="weight">
                                     </div>
                                     <div class="wizard-form-input mb-60 mt-60">
@@ -415,7 +415,7 @@
                                 <div class="row">
                                     <div class="col-md-4">
                                         <label class="option_item">
-                                            <input type="checkbox" name="smoke" class="checkbox">
+                                            <input type="checkbox" name="smoke" value = "1" class="checkbox">
                                             <span class="option_inner">
                                                 <span class="tickmark"></span>
                                                 <span class="icon"><img src="{% static 'assets/img/d1.png' %}" alt=""></span>
@@ -425,7 +425,7 @@
                                     </div>
                                     <div class="col-md-4">
                                         <label class="option_item">
-                                            <input type="checkbox" name="alcoholic" class="checkbox">
+                                            <input type="checkbox" name="alcoholic" value = "1" class="checkbox">
                                             <span class="option_inner">
                                                 <span class="tickmark"></span>
                                                 <span class="icon"><img src="{% static 'assets/img/d1.png' %}" alt=""></span>
@@ -435,7 +435,7 @@
                                     </div>
                                     <div class="col-md-4">
                                         <label class="option_item">
-                                            <input type="checkbox" name = "physical" class="checkbox">
+                                            <input type="checkbox" name = "physical" value = "1" class="checkbox">
                                             <span class="option_inner">
                                                 <span class="tickmark"></span>
                                                 <span class="icon"><img src="{% static 'assets/img/d1.png' %}" alt=""></span>
