--- a/hackstack/main_app/templates/index.html
+++ b/hackstack/main_app/templates/index.html
@@ -5,7 +5,8 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Wizard V3</title>
+    <title>WeHealth</title>
+    <link rel="shortcut icon" type="image/png" href="{% static 'assets/favicon.ico' %}"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{% static 'assets/css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'assets/css/animate.min.css' %}">
