--- a/hackstack/main_app/templates/table.html
+++ b/hackstack/main_app/templates/table.html
@@ -4,7 +4,8 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - &lt;Table&gt; Responsive</title>
+  <title>RESULT</title>
+  <link rel="shortcut icon" type="image/png" href="{% static 'assets/favicon.ico' %}"/>
   <link rel="stylesheet" href="{% static 't_asset/style.css' %}">
 
 </head>
